--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2,6 +2,7 @@
 body {
     font-family: sans-serif;
     font-size: 16px;
+    margin: 0 0 0 0;
 }
 
 label {
@@ -20,10 +21,15 @@ input[type=text], input[type=password], textarea {
 #footer {
     background-color: black;
     color: #eee;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .headshot {
     max-width: 50px;
+    border: 1px solid #222;
+    padding: 3px;
 }
 
 .menu {
@@ -35,3 +41,17 @@ input[type=text], input[type=password], textarea {
  .menu li.active {
     font-weight: bold;
  }
+
+#sidebar {
+    background: #2a2c36;
+    color: #eee;
+    position: fixed;
+    left: 0;
+    height: 100%;
+    width: 250px;
+    overflow: hidden;
+}
+
+#wrapper {
+    margin: 0 0 0 250px;
+}
