do something useful with jQuery - showing/hiding the side panel.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -51,7 +51,13 @@ input[type=text], input[type=password], textarea {
     width: 250px;
     overflow: hidden;
 }
+    #sidebar.hide-sidebar {
+        left: -250px;
+    }
 
 #wrapper {
     margin: 0 0 0 250px;
 }
+    #wrapper.hide-sidebar {
+        margin-left:0;
+    }
