--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -47,17 +47,21 @@ input[type=text], input[type=password], textarea {
     color: #eee;
     position: fixed;
     left: 0;
+    transition: left ease .25s;
     height: 100%;
     width: 250px;
     overflow: hidden;
 }
     #sidebar.hide-sidebar {
         left: -250px;
+        transition: left ease .25s;
     }
 
 #wrapper {
     margin: 0 0 0 250px;
+    transition: margin-left ease .25s;
 }
     #wrapper.hide-sidebar {
         margin-left:0;
+        transition: margin-left ease .25s;
     }
