add vendor-specific instructions for older browsers

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -47,6 +47,9 @@ input[type=text], input[type=password], textarea {
     color: #eee;
     position: fixed;
     left: 0;
+    -moz-transition: left ease .25s;
+    -o-transition: left ease .25s;
+    -webkit-transition: left ease .25s;
     transition: left ease .25s;
     height: 100%;
     width: 250px;
@@ -54,14 +57,23 @@ input[type=text], input[type=password], textarea {
 }
     #sidebar.hide-sidebar {
         left: -250px;
+        -moz-transition: left ease .25s;
+        -o-transition: left ease .25s;
+        -webkit-transition: left ease .25s;
         transition: left ease .25s;
     }
 
 #wrapper {
     margin: 0 0 0 250px;
+    -moz-transition: margin-left ease .25s;
+    -o-transition: margin-left ease .25s;
+    -webkit-transition: margin-left ease .25s;
     transition: margin-left ease .25s;
 }
     #wrapper.hide-sidebar {
         margin-left:0;
+        -moz-transition: margin-left ease .25s;
+        -o-transition: margin-left ease .25s;
+        -webkit-transition: margin-left ease .25s;
         transition: margin-left ease .25s;
     }
