--- a/Views/App/Index.cshtml
+++ b/Views/App/Index.cshtml
@@ -1,26 +1,7 @@
 @{
     ViewBag.Title = "MVC Home Page";
+    Layout = "_Layout";
 }
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>The World - @ViewBag.Title</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="/css/site.css" />
-    </head>
-    <body>
-        <div id="sidebar">
-            <img src="/img/Grandpa-Simpson-Angry.jpg" alt="headshot photo" class="headshot">
-            <span id="username">Sam Hastings</span>
-            <ul class="menu">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-        <div id = "wrapper">
-            <div id="main">
-                <div><button id="sidebarToggle">Toggle Menu</button></div>
                 <h2>The World</h2>
                 <p>A paragraph of text. Blah blah blah.</p>
                 <form>
@@ -36,12 +17,3 @@
                         <input type="submit" value="Add" />
                     </div>
                 </form>
-            </div>
-            <div id="footer">
-                &copy; 2016 The World, Inc.
-            </div>
-        </div>
-        <script type="text/javascript" src="/lib/jquery/dist/jquery.min.js"></script>
-        <script type="text/javascript" src="/js/site.js"></script>
-    </body>
-</html>
