file paths should be relative to the app's home

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,11 +3,11 @@
     <head>
         <title>The World - @ViewBag.Title</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/css/site.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
     </head>
     <body>
         <div id="sidebar">
-            <img src="/img/Grandpa-Simpson-Angry.jpg" alt="headshot photo" class="headshot">
+            <img src="~/img/Grandpa-Simpson-Angry.jpg" alt="headshot photo" class="headshot">
             <span id="username">Sam Hastings</span>
             <ul class="menu">
                 <li class="active"><a href="#">Home</a></li>
@@ -24,7 +24,7 @@
                 &copy; 2016 The World, Inc.
             </div>
         </div>
-        <script type="text/javascript" src="/lib/jquery/dist/jquery.min.js"></script>
-        <script type="text/javascript" src="/js/site.js"></script>
+        <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script type="text/javascript" src="~/js/site.js"></script>
     </body>
 </html>
