a better, less-brittle method - using TagHelpers

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
             <img src="~/img/Grandpa-Simpson-Angry.jpg" alt="headshot photo" class="headshot">
             <span id="username">Sam Hastings</span>
             <ul class="menu">
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="/app/about">About</a></li>
-                <li><a href="/app/contact">Contact</a></li>
+                <li class="active"><a asp-controller="App" asp-action="Index">Home</a></li>
+                <li><a asp-controller="App" asp-action="About">About</a></li>
+                <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
             </ul>
         </div>
         <div id = "wrapper">
