--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -65,6 +65,7 @@ input[type=text], input[type=password], textarea {
 
 #wrapper {
     margin: 0 0 0 250px;
+    padding-left: 10px;
     -moz-transition: margin-left ease .25s;
     -o-transition: margin-left ease .25s;
     -webkit-transition: margin-left ease .25s;
