--- a/Views/App/Contact.cshtml
+++ b/Views/App/Contact.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Contact Page";
 }
+@section scripts {
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
 <h2>Contact Me</h2>
 <form>
     <label asp-for="Name"></label>
