--- a/Views/App/Contact.cshtml
+++ b/Views/App/Contact.cshtml
@@ -10,12 +10,15 @@
 <form>
     <label asp-for="Name"></label>
     <input asp-for="Name"/>
+    <span asp-validation-for="Name"></span>
 
     <label asp-for="Email"></label>
     <input type="email" asp-for="Email"/>
+    <span asp-validation-for="Email"></span>
 
     <label asp-for="Message"></label>
     <textarea cols="40" rows="4" asp-for="Message"></textarea>
+    <span asp-validation-for="Message"></span>
 
     <div>
         <input type="submit" value="Send Message" />
