--- a/Views/App/Contact.cshtml
+++ b/Views/App/Contact.cshtml
@@ -7,7 +7,7 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
 <h2>Contact Me</h2>
-<form>
+<form method="POST">
     <span asp-validation-summary="ModelOnly"></span>
     <label asp-for="Name"></label>
     <input asp-for="Name"/>
