--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
     <head>
         <title>The World - @ViewBag.Title</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="~/css/site.css" />
     </head>
     <body>
@@ -25,7 +26,8 @@
             </div>
         </div>
         <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
-        @RenderSection("scripts",false)
+        <script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="~/js/site.js"></script>
+        @RenderSection("scripts",false)
     </body>
 </html>
