--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,11 +19,13 @@
         </div>
         <div id = "wrapper">
             <div id="main">
-                <div><button id="sidebarToggle">Toggle Menu</button></div>
+                <div id="sidebarToggle" class="btn btn-primary">
+                    <button id="sidebarToggle"><i class="fa fa-angle-left"></i></button>
+                </div>
             </div>
             @RenderBody()
             <div id="footer">
-                &copy; 2016 The World, Inc.
+                <p class="text-primary">&copy; 2016 The World, Inc.</p>
             </div>
         </div>
         <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
