fixed button funkyness

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
         </div>
         <div id = "wrapper">
             <div id="main">
-                <div id="sidebarToggle" class="btn btn-primary">
-                    <button id="sidebarToggle"><i class="fa fa-angle-left"></i></button>
+                <div>
+                    <button id="sidebarToggle" type="button" class="btn btn-primary btn-sm"><i class="fa fa-angle-left"></i></button>
                 </div>
             </div>
             @RenderBody()
