--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,21 +12,37 @@
         <div id="sidebar">
             <img src="~/img/Grandpa-Simpson-Angry.jpg" alt="headshot photo" class="headshot">
             <span id="username">Sam Hastings</span>
-            <ul class="menu">
+            <ul class="nav">
                 <li class="active"><a asp-controller="App" asp-action="Index">Home</a></li>
                 <li><a asp-controller="App" asp-action="About">About</a></li>
                 <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
             </ul>
         </div>
         <div id = "wrapper">
-            <div id="main">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <ul class="nav nvabar-nav navbar-left">
+                        <li>
+                            <button id="sidebarToggle" type="button" class="btn btn-primary btn-sm"><i class="fa fa-angle-left"></i></button>
+                        </li>
+                    </ul>
+                    <a asp-controller="App" asp-action="Index" class="navbar-brand">The World</a>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="fa fa-save"></span> Save</a></li>
+                        <li><a href="#"><span class="fa fa-print"></span> Print</a></li>
+                        <li><a href="#"><span class="fa fa-sign-in"></span> Sign-In</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div id="main" class="container-fluid">
                 <div>
-                    <button id="sidebarToggle" type="button" class="btn btn-primary btn-sm"><i class="fa fa-angle-left"></i></button>
+                    @RenderBody()
                 </div>
             </div>
-            @RenderBody()
-            <div id="footer">
-                <p class="text-primary">&copy; 2016 The World, Inc.</p>
+            <div id="footer"  class="container-fluid">
+                <div class="navbar navbar-inverse navbar-fixed-bottom">
+                    <h4 class="text-center text-info">&copy; 2016 The World, Inc.</h4>
+                </div>
             </div>
         </div>
         <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
