--- a/Views/App/Index.cshtml
+++ b/Views/App/Index.cshtml
@@ -1,18 +1,25 @@
 @{
     ViewBag.Title = "MVC Home Page";
 }
-<h2>The World</h2>
-<p>A paragraph of text. Blah blah blah.</p>
-<form>
-    <div>
-        <label>Date</label>
-        <input />
+<div class="row">
+    <div class="col-md-6 col-xs-8">
+        <h2>The World</h2>
+        <p>A paragraph of text. Blah blah blah.</p>
+        <form>
+            <div>
+                <label>Date</label>
+                <input />
+            </div>
+            <div>
+                <label>Location</label>
+                <input />
+            </div>
+            <div>
+                <input type="submit" value="Add" />
+            </div>
+        </form>
     </div>
-    <div>
-        <label>Location</label>
-        <input />
+    <div class="col-md-6 col-xs-4">
+        <h2>The Map</h2>
     </div>
-    <div>
-        <input type="submit" value="Add" />
-    </div>
-</form>
+</div>
