--- a/Views/App/Index.cshtml
+++ b/Views/App/Index.cshtml
@@ -6,16 +6,16 @@
         <h2>The World</h2>
         <p>A paragraph of text. Blah blah blah.</p>
         <form>
-            <div>
+            <div class="form-group">
                 <label>Date</label>
-                <input />
+                <input class="form-control" />
             </div>
-            <div>
+            <div class="form-group">
                 <label>Location</label>
-                <input />
+                <input class="form-control" />
             </div>
-            <div>
-                <input type="submit" value="Add" />
+            <div class="form-group">
+                <input type="submit" value="Add" class="btn btn-success" />
             </div>
         </form>
     </div>
